services/rsc/default-app/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-app-deployment
  namespace: default-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: default-app
  template:
    metadata:
      labels:
        app: default-app
    spec:
      containers:
      - name: default-app
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: default-app-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: default-app-volume
        configMap:
          name: default-app-page
---
apiVersion: v1
kind: Service
metadata:
  name: default-app-service
  namespace: default-app
spec:
  type: ClusterIP
  selector:
    app: default-app
  ports:
  - port: 80
    targetPort: 80
